# da-forge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
da_forge/: __init__.py  __main__.py  cli.py  config.py  core.py  manifest.py  packaging.py
da_forge/templates/default/: declarativeAgent_0.json  manifest.json
docs/: capabilities.md  development.md
examples/: full-capabilities.json
sockets/: example.json
tests/: test_core.py  test_manifest.py  test_packaging.py
